# sparplan

./: README.md  entrypoint.py  pyproject.toml
Sparplan/: __init__.py  config_default.yaml  constants.py  gardener.py  input_reader.py
data/: djia.csv  djia.ipynb  djia.parquet  dummy.parquet  dummy.py
