[tool.poetry]
name = "sparplan"
version = "0.1.0"
description = ""
authors = ["wcchu <weichun.chu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
matplotlib = "^3.10.1"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
